--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "rxjs": "~6.6.0",
-    "tailwind": "^4.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^9.2.0",
+    "@angular-builders/custom-webpack": "^8.4.1",
     "@angular-devkit/build-angular": "~0.803.28",
     "@angular/cli": "~8.3.28",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -48,6 +48,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-scss": "^2.1.1",
     "protractor": "~5.4.0",
+    "tailwindcss": "^1.4.6",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3",
